# filtrark

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
docs/: .gitignore  installation.rst
filtrark/: __init__.py  api.py  expression_parser.py  filtrark.py  operator_group.py  safe_eval.py  sql_parser.py  string_parser.py
tests/: test_expression_parser.py  test_filtrark.py  test_operator_group.py  test_safe_eval.py  test_sql_parser.py  test_string_parser.py  xtest_expression_parser.py
