[tool.poetry]
name = "filtrark"
version = "0.10.0"
description = "Build filter clauses from instruction lists"
authors = ["Knowark"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
